--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "Get your ip address and location, get location of a provided ip address",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -23,11 +23,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.2.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
     "rollup": "^3.21.6",
