update rollup plugins order

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.2.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
   },
