--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.11",
-  "description": "Get your ip address and location, get location of a provided ip address",
+  "version": "1.0.12",
+  "description": "Get your ip address and location with a single line of code, get location of a provided ip address",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
@@ -21,6 +21,10 @@
     "reactjs",
     "javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HuyFrontend/react-ip-location.git"
+  },
   "author": "HuyFrontend",
   "license": "ISC",
   "dependencies": {
