--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.16",
+  "version": "1.0.18",
   "description": "Get your ip address and location with a single line of code, get location of a provided ip address",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -29,6 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.2.6",
+    "cross-fetch": "^3.1.6",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
   },
