--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ip-location",
-  "version": "1.0.22",
+  "version": "1.0.24",
   "description": "Get your ip address and location with a single line of code, get location of a provided ip address",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -10,7 +10,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "rollup": "rollup -c --bundleConfigAsCjs --inlineDynamicImports"
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "pl": "rollup -c --bundleConfigAsCjs && npm publish"
   },
   "keywords": [
     "location",
@@ -29,7 +30,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.2.6",
-    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "typescript": "^5.0.4"
   },
